--- a/sample-apps/spring-boot-sample/src/main/resources/application.properties
+++ b/sample-apps/spring-boot-sample/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=spring-boot-sample
+# Judoscale configuration
+# Use request catcher for local testing
+judoscale.api-base-url=https://judoscale-java.requestcatcher.com/api
+
+# Report every 10 seconds (default)
+judoscale.report-interval-seconds=10
+
+# Logging
+logging.level.com.judoscale=DEBUG
