--- a/sample-apps/spring-boot-sample/src/main/resources/application.properties
+++ b/sample-apps/spring-boot-sample/src/main/resources/application.properties
@@ -5,5 +5,8 @@ judoscale.api-base-url=https://judoscale-java.requestcatcher.com/api
 # Report every 10 seconds (default)
 judoscale.report-interval-seconds=10
 
+# Development: disable template caching for live reload
+spring.thymeleaf.cache=false
+
 # Logging
 logging.level.com.judoscale=DEBUG
