--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      dry_run:
+        description: 'Dry run (skip actual publish)'
+        type: boolean
+        default: true
 
 jobs:
   release-please:
@@ -67,9 +73,21 @@ jobs:
         run: ./gradlew build
 
       - name: Publish to Maven Central
+        if: ${{ inputs.dry_run != true }}
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
           GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
           GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
         run: ./gradlew publish
+
+      - name: Publish dry run
+        if: ${{ inputs.dry_run == true }}
+        env:
+          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
+          GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
+        run: |
+          echo "Dry run - publishing to local repository only"
+          ./gradlew publishToMavenLocal
+          echo "Would publish these artifacts:"
+          find ~/.m2/repository/com/judoscale -type f -name "*.jar" -o -name "*.pom" | head -20
