chore: refactor Gradle build for Maven publishing
- Updated build scripts to use the new maven-publish plugin alias.
- Simplified publishing configuration for judoscale-core and judoscale-spring-boot-starter.
- Enhanced release workflow to use environment variables for Maven Central credentials.
- Removed deprecated signing and publishing configurations.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,17 +75,17 @@ jobs:
       - name: Publish to Maven Central
         if: ${{ inputs.dry_run != true }}
         env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
-          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
-          GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
-        run: ./gradlew publish
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SIGNING_PASSWORD }}
+        run: ./gradlew publishToMavenCentral
 
       - name: Publish dry run
         if: ${{ inputs.dry_run == true }}
         env:
-          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
-          GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_SIGNING_PASSWORD }}
         run: |
           echo "Dry run - publishing to local repository only"
           ./gradlew publishToMavenLocal
