--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       dry_run:
-        description: 'Dry run (skip actual publish)'
+        description: "Dry run (skip actual publish)"
         type: boolean
         default: true
 
@@ -36,10 +36,11 @@ jobs:
         if: ${{ steps.release.outputs.pr != '' }}
         run: |
           VERSION=$(cat version.txt)
-          # Update Maven example
+          # Update Maven examples (all version tags)
           sed -i "s|<version>[0-9]*\.[0-9]*\.[0-9]*</version>|<version>${VERSION}</version>|g" README.md
-          # Update Gradle example
+          # Update Gradle examples (both starters)
           sed -i "s|judoscale-spring-boot-starter:[0-9]*\.[0-9]*\.[0-9]*|judoscale-spring-boot-starter:${VERSION}|g" README.md
+          sed -i "s|judoscale-spring-boot-2-starter:[0-9]*\.[0-9]*\.[0-9]*|judoscale-spring-boot-2-starter:${VERSION}|g" README.md
 
       - name: Commit version updates
         if: ${{ steps.release.outputs.pr != '' }}
@@ -63,8 +64,8 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
+          java-version: "21"
+          distribution: "temurin"
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
